--- a/how_llms_work.ipynb
+++ b/how_llms_work.ipynb
@@ -149,6 +149,43 @@
         "output = widgets.VBox([interactive_plot])\n",
         "display(widgets.HBox([controls, output]))\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dal Neurone artificiale all'autoencoder\n",
+        "\n",
+        "![Neurone artificiale](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/3.png)\n",
+        "\n",
+        "\n",
+        "![Deep Learning](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/4.png)\n",
+        "\n",
+        "![Autoencoder](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/5.png)\n",
+        "\n",
+        "![Self Encoder](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/6.png)"
+      ],
+      "metadata": {
+        "id": "-RdC3PpIQELo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ora proviamo a giocare un po' con le reti neurali e vedere dove e come conservano l'informazione\n",
+        "\n",
+        "Prima una cosa semplice....\n",
+        "\n",
+        "[Analyzing our neural network di 3Blue1Brown](https://www.3blue1brown.com/lessons/neural-network-analysis)\n",
+        "\n",
+        "----\n",
+        "\n",
+        "Poi vediamo una rete neurale moderna di classificazione\n",
+        "\n",
+        "[attention visualization](https://huggingface.co/spaces/webml-community/attention-visualization)"
+      ],
+      "metadata": {
+        "id": "2lGsC74HSCaZ"
+      }
     }
   ],
   "metadata": {
