--- a/how_llms_work.ipynb
+++ b/how_llms_work.ipynb
@@ -186,6 +186,120 @@
       "metadata": {
         "id": "2lGsC74HSCaZ"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Da qui agli LLM è solo questione di attenzione\n",
+        "\n",
+        "![Attention is all you need](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/7.png)\n",
+        "\n",
+        "E su questo iniziamo a vedere un video insieme\n",
+        "\n",
+        "[3Blue1Brown LLM for beginners](https://youtu.be/LPZh9BOjkQs)"
+      ],
+      "metadata": {
+        "id": "jK0ocGz1T8PM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Con quali dati si fa un training\n",
+        "\n",
+        "[datasets](https://huggingface.co/datasets)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Dimk9KxOXPnU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ma come fa un LLM a decidere qual'è la prossima parola?\n",
+        "\n",
+        "![Transformer](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/8.png)\n",
+        "\n",
+        "\n",
+        "Come abbiamo visto il lavoro è fatto su i token...ma cosa sono questi token?\n",
+        "\n",
+        "* Una parola?\n",
+        "* Un insieme di parole?\n",
+        "* una parte di una parola?\n",
+        "\n",
+        "[Proviamo...](https://platform.openai.com/tokenizer)\n",
+        "\n",
+        "I token (ed il loro significato in uncerto senso) sono rappresentati come vettori multidimensionali (tensori). Questa rappresentazione è detto embedding\n",
+        "\n",
+        "![embeddings](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/9.png)\n",
+        "\n",
+        "La rappresentazione vettoriale permette di fare calcoli\n",
+        "\n",
+        "![vector aritmetics](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/10.png)\n",
+        "\n",
+        "![vector aritmetics](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/11.png)\n",
+        "\n",
+        "![Vector aritmetics](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/12.png)\n",
+        "\n",
+        "![Direction](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/13.png)\n",
+        "\n",
+        "------\n",
+        "\n",
+        "## Quindi E(gatto) - E(miao) + E(Bau) = ?\n",
+        "\n",
+        "------\n",
+        "\n",
+        "\n",
+        "Viene poi definita una unemdding matrix che permette di passare ad un array unidimensionale....ma che ancora non è una distribuzione di probabilità\n",
+        "\n",
+        "\n",
+        "![Unembedding](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/14.png)\n",
+        "\n",
+        "Quindi si applica una funzione di softmax\n",
+        "\n",
+        "![softmax](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/15.png)\n",
+        "\n",
+        "Ma come dicevamo del cervello umano serve imprevidibilità...se volete chiamatela creatività e alloro si introducono alcune variabli T, top-k, top-p...vediamone solo uno matematicamente\n",
+        "\n",
+        "![Attention is all you need](https://raw.githubusercontent.com/maeste/iis_ai/refs/heads/main/images/16.png)\n",
+        "\n",
+        "\n",
+        "[a per capire meglio giochiamo con tutte e tre](https://huggingface.co/spaces/genaibook/token_probability_distribution)\n",
+        "\n",
+        "\n",
+        "\n",
+        "##Capire come funzionano questo cose ci fa capire come interagire con gli LLM, ovvero come scrivere prompt migliori\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LUqOMkR5i9Zu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ma cosa possono fare questi LLM\n",
+        "\n",
+        "Un sacco di cose:\n",
+        "\n",
+        "[Leggere un grafico](https://huggingface.co/spaces/ahmed-masry/ChartGemma)\n",
+        "\n",
+        "[Creare una immagine](https://huggingface.co/spaces/multimodalart/stable-diffusion-3.5-large-turboX)\n",
+        "\n",
+        "[Creare o clonare una voce](https://huggingface.co/spaces/Mobvoi/Offical-Spark-TTS)\n",
+        "\n",
+        "Fare applicazioni molto evolute.....così evolute da sembrare super poteri (demo di qualche Big LLM)\n",
+        "\n",
+        "Proviamo ad esplorare un po' huggingface [sapces](https://huggingface.co/spaces) and [spaces of the week](https://huggingface.co/spaces/hysts/spaces-of-the-week)"
+      ],
+      "metadata": {
+        "id": "GrWGACHwoK0J"
+      }
     }
   ],
   "metadata": {
