--- a/how_llms_work.ipynb
+++ b/how_llms_work.ipynb
@@ -21,6 +21,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "11QPWic4qShg"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
