Added link to projector.tensorflow.org

--- a/how_llms_work.ipynb
+++ b/how_llms_work.ipynb
@@ -880,6 +880,10 @@
         "\n",
         "------\n",
         "\n",
+        "Se volete esplorare più dettagli [questo](projector.tensorflow.org) è uno strumento didattico\n",
+        "\n",
+        "\n",
+        "--------\n",
         "\n",
         "Viene poi definita una unemdding matrix che permette di passare ad un array unidimensionale....ma che ancora non è una distribuzione di probabilità\n",
         "\n",
